use of LibAssociation distribution for java debugging
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@440 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/UML1.4_projects/UML1.4/.classpath
+++ b/UML1.4_projects/UML1.4/.classpath
@@ -4,5 +4,7 @@
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="lib" path="/Utils/dist/bin/ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="src" path="/BasicMtl2Java"/>
+    <classpathentry kind="lib"
+        path="/BasicMtl2Java/LibAssociation/dist/bin/BasicMTLruntime.jar" sourcepath="C:/eclipse_lievre/workspace/BasicMtl2Java/LibAssociation/src"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
