added MOF1.4 added SimpleUML
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@449 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/CompilerTests/build.xml
+++ b/BasicMTL_projects/CompilerTests/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2004-02-18 10:04:13 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.2 2004-02-18 13:20:14 dvojtise Exp $ -->
 <project name="Non regression : Build,run all tests and sample projects" default="run all" basedir=".">
 	<description>
         Build and run all tests of the CompilerTests project and also compiles and runs known projects
@@ -15,7 +15,12 @@
 	    <echo>Building CompilerTests tests.</echo>
 		<ant antfile="${basedir}/src/build.xml" dir="${basedir}/src" target="build all" inheritAll="false"/>
 
-	    
+		<echo>Building SimpleUML</echo>
+		<ant antfile="${basedir}/../SimpleUML/src/SimpleUMLTransformations/build.xml" dir="${basedir}/../SimpleUML/src/SimpleUMLTransformations" target="compile" inheritAll="false"/>
+		
+		<echo>Building "MOF1.4" project</echo>
+	    <ant antfile="${basedir}/../MOF1.4/build.xml" dir="${basedir}/../MOF1.4" target="build MOF test" inheritAll="false"/>
+		    
 	</target>
   
 	<target name="clean"
@@ -23,9 +28,15 @@
     	<!-- Delete the ${build}, {$bin}  directory trees -->
     	<echo>Cleaninging CompilerTests</echo>
 		<ant antfile="${basedir}/src/build.xml" dir="${basedir}/src" target="clean" inheritAll="false"/>
-    	
+
+		<echo>Cleaning SimpleUML</echo>
+		<ant antfile="${basedir}/../SimpleUML/src/SimpleUMLTransformations/build.xml" dir="${basedir}/../SimpleUML/src/SimpleUMLTransformations" target="clean" inheritAll="false"/>
+		    	
     	<echo>Cleaning "UML1.4" project</echo>
 	    <ant antfile="${basedir}/../UML1.4/build.xml" dir="${basedir}/../UML1.4" target="clean" inheritAll="false"/>
+  	   
+  	    <echo>Cleaning "MOF1.4" project</echo>
+	    <ant antfile="${basedir}/../MOF1.4/build.xml" dir="${basedir}/../MOF1.4" target="clean" inheritAll="false"/>
   	   
   	   	<echo>Cleaning "SimpleUMLSimpleRDBMS" project</echo>
 	    <ant antfile="${basedir}/../SimpleUMLSimpleRDBMS/build.xml" dir="${basedir}/../SimpleUMLSimpleRDBMS" target="clean" inheritAll="false"/>
@@ -36,12 +47,19 @@
 	    <!-- call successively each runner -->
 	    <echo>Running CompilerTests tests.</echo>
 		<ant antfile="${basedir}/src/build.xml" dir="${basedir}/src" target="run all" inheritAll="false"/>
-		
-		<echo>Running  transformation available in "UML1.4" project</echo>
-	    <ant antfile="${basedir}/../UML1.4/build.xml" dir="${basedir}/../UML1.4" target="run all UML14_Transformations" inheritAll="false"/>
-	    
+
+		<echo>Running SimpleUML</echo>
+		<ant antfile="${basedir}/../SimpleUML/src/SimpleUMLTransformations/build.xml" dir="${basedir}/../SimpleUML/src/SimpleUMLTransformations" target="run sample" inheritAll="false"/>
+
 	    <echo>Running "SimpleUMLSimpleRDBMS" project</echo>
 	    <ant antfile="${basedir}/../SimpleUMLSimpleRDBMS/build.xml" dir="${basedir}/../SimpleUMLSimpleRDBMS" target="run all" inheritAll="false"/>
+				
+		<echo>Running  transformation available in "UML1.4" project</echo>
+	    <ant antfile="${basedir}/../UML1.4/build.xml" dir="${basedir}/../UML1.4" target="run all UML14_Transformations" inheritAll="false"/>
+
+		<echo>Running "MOF1.4" project</echo>
+	    <ant antfile="${basedir}/../MOF1.4/build.xml" dir="${basedir}/../MOF1.4" target="run MOF test" inheritAll="false"/>
+	    
   	   
   	</target>
 </project>
