EMFDriver first Tests : model loading,save and creation; allInstances attributes access for attributes of "primitive types"  types
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@466 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/RepositoryDriver_projects/org.inria.EMFDriver/.classpath
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
     <classpathentry kind="src" path="src/"/>
+    <classpathentry kind="lib" path="BasicMTLruntime.jar"/>
     <classpathentry kind="var"
         path="ECLIPSE_HOME/plugins/org.eclipse.core.resources_2.1.1/resources.jar" sourcepath="ORG_ECLIPSE_PLATFORM_SOURCE_SRC/org.eclipse.core.resources_2.1.1/resourcessrc.zip"/>
     <classpathentry kind="var"
@@ -31,7 +32,6 @@
     <classpathentry kind="var"
         path="ECLIPSE_HOME/plugins/org.eclipse.core.runtime_2.1.1/runtime.jar" sourcepath="ORG_ECLIPSE_PLATFORM_SOURCE_SRC/org.eclipse.core.runtime_2.1.1/runtimesrc.zip"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-    <classpathentry kind="lib" path="C:/ECLIPSEEMFDRIVER/eclipse/workspace/RepositoryAPI/dist/bin/RepositoryAPI.jar"/>
-    <classpathentry kind="lib" path="C:/ECLIPSEEMFDRIVER/eclipse/workspace/RepositoryAPI/dist/bin/MTDataTypes.jar"/>
+    <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
