--- a/RepositoryDriver_projects/org.inria.EMFTransformationLauncher/.project
+++ b/RepositoryDriver_projects/org.inria.EMFTransformationLauncher/.project
@@ -3,6 +3,7 @@
 	<name>org.inria.EMFTransformationLauncher</name>
 	<comment></comment>
 	<projects>
+		<project>EMFDriverTest</project>
 		<project>org.inria.EMFDriver</project>
 	</projects>
 	<buildSpec>
