--- a/RepositoryDriver_projects/org.inria.EMFDriver/build.xml
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/build.xml
@@ -1,107 +1,125 @@
-<!-- $Id: build.xml,v 1.1 2004-02-27 08:33:58 jpthibau Exp $ -->
-<!-- to make this build script work you need to add antlrfull.jar in the windows>preferences>ant>runtime -->
-<project name="org.inria.EMFDriver" default="dist" basedir=".">
-	<description>
-        An adaptor of the RepositoryAPI API to the EMF tool.
-	</description>
-	<!-- set global properties for this build -->
-	<property name="emf"  location="ThirdParty/EMF/official"/>
-	<property name="src" location="src"/>
-	<property name="bin" location="bin"/>
-	<property name="dist"  location="dist"/>
-	
-	<!-- This project depends on the RepositoryAPI project -->
-	<property name="RepositoryAPI"  location="..\RepositoryAPI"/>
-	<!-- This project deeply depends on the MTDataTypes and Utils project -->
-	<property name="MTDataTypes"  location="..\MTDataTypes"/>
-	<property name="Utils"  location="..\Utils"/>
+<?xml version="1.0" encoding="UTF-8"?>
+<project name="org.inria.EMFDriver" default="build.jars" basedir=".">
 
-	<target name="init">
-    	<!-- Create the time stamp -->
-    	<tstamp/>
-	    <!-- Create the build directory structure used by compile -->
-	    <mkdir dir="${bin}"/>
-	    <mkdir dir="${dist}"/>
-	    <mkdir dir="${dist}/bin"/>
-	    
-	    <!-- This project depends on the RepositoryAPI project -->
-	    <echo>Building the "RepositoryAPI" project.</echo>
-	    <ant antfile="${RepositoryAPI}\build.xml" dir="${RepositoryAPI}" target="dist" inheritAll="false"/>
-	    <echo>"RepositoryAPI" project built.</echo>
+	<property name="bootclasspath" value=""/>
+	<property name="ws" value="win32"/>
+	<property name="os" value="win32"/>
+	<property name="arch" value="x86"/>
+	<property name="javacFailOnError" value="false"/>
+	<property name="javacDebugInfo" value="on"/>
+	<property name="javacVerbose" value="true"/>
+
+	<target name="init" depends="properties">
+		<property name="plugin" value="org.inria.EMFDriver"/>
+		<property name="version.suffix" value="_1.0.0"/>
+		<property name="full.name" value="${plugin}${version.suffix}"/>
+		<property name="temp.folder" value="${basedir}/temp.folder"/>
+		<property name="plugin.destination" value="${basedir}"/>
+		<property name="build.result.folder" value="${basedir}"/>
 	</target>
-  
-	<target name="compile_java" depends="init"
-        description="compile the source " >
-    	<!-- Compile the java code from ${src} into ${bin} -->
-	    <javac srcdir="${src}"
-    	    destdir="${bin}"
-   			classpath=".;${RepositoryAPI}\bin;${MTDataTypes}\bin;${Utils}\bin;..\Utils\ThirdParty\junit\junit.jar;..\Utils\ThirdParty\log4j\log4j.jar"
-   			debug="true"/>
+
+	<target name="properties" if="eclipse.running">
+		<property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
 	</target>
-  	<target name="full_javadoc" 
-  		description="create a full javadoc document that describes all the classes of the project">
-	    <javadoc destdir="docs\javadoc" access="private" use="true"
-            notree="false" nonavbar="false" noindex="false"
-            splitindex="true" author="true" version="true"
-            nodeprecatedlist="false" nodeprecated="false"
-            sourcepath="src"
-            classpath="bin;{RepositoryAPI}\bin;${MTDataTypes}\bin;${Utils}\bin;..\Utils\ThirdParty\junit\junit.jar;..\Utils\ThirdParty\log4j\log4j.jar" doctitle="Data Types internal Documentation">
-            <link href="http://www.junit.org/junit/javadoc/3.8.1/index.htm"/>
-            <link href="file:/T:/Soft/multiplatform/Java_lib/log4j/jakarta-log4j-1.2.8/docs/api/"/>
-        </javadoc>
+
+	<target name="build.update.jar" depends="init" description="Build the plug-in: org.inria.EMFDriver for an update site.">
+		<delete dir="${temp.folder}"/>
+		<mkdir dir="${temp.folder}"/>
+		<antcall target="build.jars"/>
+		<antcall target="gather.bin.parts">
+			<param name="destination.temp.folder" value="${temp.folder}/"/>
+		</antcall>
+		<zip zipfile="${plugin.destination}/${full.name}.jar" basedir="${temp.folder}/${full.name}" filesonly="false" update="no"/>
+		<delete dir="${temp.folder}"/>
 	</target>
-	<target name="create_jar" depends="compile_java"
-		description="create the jar file">
-		<jar destfile="${dist}/bin/${ant.project.name}.jar">
-			<!-- files to include in the jar -->
-			<fileset dir="${bin}"/>
-			<!-- manifest to include -->
-		    <manifest>
-		    	<attribute name="Built-By" value="${user.name}"/>  
-				<attribute name="Class-Path" value="RepositoryAPI.jar MTDataTypes.jar Utils.jar ThirdParty/log4j/log4j.jar ThirdParty/junit/junit.jar"/>
-		    	<section name="${ant.project.name}">
-		      		<attribute name="Specification-Title" value="${ant.project.name}"/>
-      				<attribute name="Specification-Version" value="${TSTAMP} ${TODAY}"/>
-      				<attribute name="Specification-Vendor" value="Irisa/Triskell"/>
-      				<attribute name="Implementation-Title" value="common"/>
-      				<attribute name="Implementation-Version" value="${TSTAMP} ${TODAY}"/> 
-      				<attribute name="Implementation-Vendor" value="Irisa/Triskell"/>
-    			</section>
-		    </manifest>
-		</jar>
-	</target>
-	<target name="dist" depends="create_jar"
-		description="create a distibution">
-		<mkdir dir="${dist}"/>
-		<!-- This project depends on the RepositoryAPI project -->
-		<copy todir="${dist}/bin">
-			<fileset dir="${RepositoryAPI}\dist\bin"/>
+
+	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
+		<mkdir dir="${destination.temp.folder}/${full.name}"/>
+		<copy file="${build.result.folder}/EMFDriver.jar" todir="${destination.temp.folder}/${full.name}"/>
+		<copy todir="${destination.temp.folder}/${full.name}">
+			<fileset dir="${basedir}" includes="plugin.xml,*.jar,EMFDriver.jar"/>
 		</copy>
-		
-		
-		<copy todir="${dist}/bin/ThirdParty/EMF">
-			<fileset dir="${emf}"/>
-		</copy>
-	    <copy file="${dist}/bin/org.inria.EMFDriver.jar"
-	    	todir="${dist}/bin/ThirdParty/EMF/"/>
-
-	    <copy file="log4j_configuration.xml"
-	    	todir="${dist}/bin/"
-	    	overwrite="true"/>
-	    	
-	    	
 	</target>
-  	<target name="clean"
-        description="clean up" >
-    	<!-- Delete the {$bin} and ${dist} directory trees -->
-    	<delete dir="${bin}"/>
-    	<delete dir="${dist}"/> 
-  	</target>
 
-  	<target name="deep_clean" depends="clean"
-        description="deep clean up (including depending projects)" >
-	    
-	    <!-- This project depends on the RepositoryAPI project -->
-	    <ant antfile="${RepositoryAPI}\build.xml" dir="${RepositoryAPI}" target="deep_clean" inheritAll="false"/>
-    </target>
+	<target name="EMFDriver.jar" depends="init" unless="EMFDriver.jar" description="Create jar: EMFDriver.jar.">
+		<property name="destdir" value="${temp.folder}/EMFDriver.jar.bin"/>
+		<delete dir="${temp.folder}/EMFDriver.jar.bin"/>
+		<mkdir dir="${temp.folder}/EMFDriver.jar.bin"/>
+		<!-- compile the source code -->
+		<javac destdir="${temp.folder}/EMFDriver.jar.bin" failonerror="${javacFailOnError}" verbose="${javacVerbose}" debug="${javacDebugInfo}" includeAntRuntime="no" bootclasspath="${bootclasspath}" classpath="../../plugins/org.eclipse.core.boot_2.1.2/bin;../../plugins/org.eclipse.core.boot_2.1.2/boot.jar;BasicMTLruntime.jar;log4j.jar;../../plugins/org.eclipse.core.runtime_2.1.1/bin;../../plugins/org.eclipse.core.runtime_2.1.1/runtime.jar;../../plugins/org.apache.xerces_4.0.13/bin;../../plugins/org.apache.xerces_4.0.13/xmlParserAPIs.jar;../../plugins/org.apache.xerces_4.0.13/xercesImpl.jar;../../plugins/org.eclipse.core.resources_2.1.1/bin;../../plugins/org.eclipse.core.resources_2.1.1/resources.jar;../../plugins/org.eclipse.core.resources.win32_2.1.0/resources.jar;../../plugins/org.eclipse.ui_2.1.1/bin;../../plugins/org.eclipse.ui_2.1.1/ui.jar;../../plugins/org.eclipse.update.core_2.1.0/bin;../../plugins/org.eclipse.update.core_2.1.0/updatecore.jar;../../plugins/org.eclipse.update.core.win32_2.1.0/updatecore.jar;../../plugins/org.eclipse.help_2.1.2/bin;../../plugins/org.eclipse.help_2.1.2/help.jar;../../plugins/org.apache.lucene_1.2.1/bin;../../plugins/org.apache.lucene_1.2.1/parser.jar;../../plugins/org.apache.lucene_1.2.1/lucene-1.2.jar;../../plugins/org.eclipse.help.appserver_2.1.0/bin;../../plugins/org.eclipse.help.appserver_2.1.0/appserver.jar;../../plugins/org.eclipse.swt_2.1.2/bin;../../plugins/org.eclipse.swt_2.1.2/ws/${ws}/swt.jar;../../plugins/org.eclipse.swt.win32_2.1.2/ws/${ws}/swt.jar;../../plugins/org.eclipse.text_2.1.0/bin;../../plugins/org.eclipse.text_2.1.0/text.jar;../../plugins/org.eclipse.jface_2.1.1/bin;../../plugins/org.eclipse.jface_2.1.1/jface.jar;../../plugins/org.eclipse.jface.text_2.1.0/bin;../../plugins/org.eclipse.jface.text_2.1.0/jfacetext.jar;../../plugins/org.eclipse.ui.views_2.1.0/bin;../../plugins/org.eclipse.ui.views_2.1.0/views.jar;../../plugins/org.eclipse.ui.workbench_2.1.1/bin;../../plugins/org.eclipse.ui.workbench_2.1.1/workbench.jar;../../plugins/org.eclipse.ui.win32_2.1.0/workbench.jar;../../plugins/org.eclipse.ui.win32_2.1.0/bin;../../plugins/org.eclipse.ui.win32_2.1.0/workbenchwin32.jar;../../plugins/org.eclipse.ui.workbench.texteditor_2.1.0/bin;../../plugins/org.eclipse.ui.workbench.texteditor_2.1.0/texteditor.jar;../../plugins/org.eclipse.ui.editors_2.1.0/bin;../../plugins/org.eclipse.ui.editors_2.1.0/editors.jar;../../plugins/org.eclipse.emf.edit_1.1.1/bin;../../plugins/org.eclipse.emf.edit_1.1.1/runtime/edit.jar;../../plugins/org.eclipse.emf.common_1.1.1/bin;../../plugins/org.eclipse.emf.common_1.1.1/runtime/common.jar;../../plugins/org.eclipse.emf.ecore_1.1.1/bin;../../plugins/org.eclipse.emf.ecore_1.1.1/runtime/ecore.jar">
+			<src path="src/"/>
+		</javac>
+		<!-- copy necessary resources -->
+		<copy todir="${temp.folder}/EMFDriver.jar.bin">
+			<fileset dir="src/" excludes="**/*.java"/>
+		</copy>
+		<mkdir dir="${build.result.folder}"/>
+		<jar jarfile="${build.result.folder}/EMFDriver.jar" basedir="${temp.folder}/EMFDriver.jar.bin"/>
+		<delete dir="${temp.folder}/EMFDriver.jar.bin"/>
+	</target>
+
+	<target name="EMFDriversrc.zip" depends="init" unless="EMFDriver.jar">
+		<mkdir dir="${build.result.folder}"/>
+		<zip zipfile="${build.result.folder}/EMFDriversrc.zip" filesonly="false" update="no">
+			<fileset dir="src/" includes="**/*.java"/>
+		</zip>
+	</target>
+
+	<target name="build.jars" depends="init" description="Build all the jars for the plug-in: org.inria.EMFDriver.">
+		<available property="EMFDriver.jar" file="${build.result.folder}/EMFDriver.jar"/>
+		<antcall target="EMFDriver.jar"/>
+	</target>
+
+	<target name="build.sources" depends="init">
+		<available property="EMFDriversrc.zip" file="${build.result.folder}/EMFDriversrc.zip"/>
+		<antcall target="EMFDriversrc.zip"/>
+	</target>
+
+		<target name="build.zips" depends="init">
+		</target>
+
+	<target name="gather.sources" depends="init" if="destination.temp.folder">
+		<mkdir dir="${destination.temp.folder}/${full.name}"/>
+		<copy file="${build.result.folder}/EMFDriversrc.zip" todir="${destination.temp.folder}/${full.name}"/>
+	</target>
+
+	<target name="gather.logs" depends="init" if="destination.temp.folder">
+		<mkdir dir="${destination.temp.folder}/${full.name}"/>
+		<copy file="${temp.folder}/EMFDriver.jar.bin.log" todir="${destination.temp.folder}/${full.name}"/>
+	</target>
+
+	<target name="clean" depends="init" description="Clean the plug-in: org.inria.EMFDriver of all the zips, jars and logs created.">
+		<delete file="${build.result.folder}/EMFDriver.jar"/>
+		<delete file="${build.result.folder}/EMFDriversrc.zip"/>
+		<delete file="${plugin.destination}/${full.name}.jar"/>
+		<delete file="${plugin.destination}/${full.name}.zip"/>
+		<delete dir="${temp.folder}"/>
+	</target>
+
+	<target name="refresh" depends="init" if="eclipse.running">
+		<eclipse.convertPath fileSystemPath="C:\ECLIPSEEMFDRIVER\eclipse\workspace\org.inria.EMFDriver\" property="resourcePath"/>
+		<eclipse.refreshLocal resource="${resourcePath}" depth="infinite"/>
+	</target>
+
+	<target name="zip.plugin" depends="init" description="Create a zip containing all the elements for the plug-in: org.inria.EMFDriver.">
+		<delete dir="${temp.folder}"/>
+		<mkdir dir="${temp.folder}"/>
+		<antcall target="build.jars"/>
+		<antcall target="build.sources"/>
+		<antcall target="gather.bin.parts">
+			<param name="destination.temp.folder" value="${temp.folder}/"/>
+		</antcall>
+		<antcall target="gather.sources">
+			<param name="destination.temp.folder" value="${temp.folder}/"/>
+		</antcall>
+		<delete>
+			<fileset dir="${temp.folder}" includes="**/*.bin.log"/>
+		</delete>
+		<antcall target="zip.folder"/>
+		<delete dir="${temp.folder}"/>
+	</target>
+	<target name="zip.folder" depends="init">
+		<zip zipfile="${plugin.destination}/${full.name}.zip" basedir="${temp.folder}" filesonly="true" update="no" excludes="**/*.bin.log"/>
+	</target>
+
 </project>
