--- a/RepositoryDriver_projects/org.inria.EMFTransformationLauncher/.classpath
+++ b/RepositoryDriver_projects/org.inria.EMFTransformationLauncher/.classpath
@@ -29,10 +29,15 @@
     <classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.eclipse.emf.ecore.xmi_1.1.1/runtime/ecore.xmi.jar"/>
     <classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.eclipse.emf.ecore.edit_1.1.1/runtime/ecore.edit.jar"/>
     <classpathentry kind="src" path="/org.inria.EMFDriver"/>
+    <classpathentry kind="src" path="/EMFDriverTest"/>
+    <classpathentry kind="var" path="ECLIPSE_HOME/plugins/library_1.0.0/library.jar"/>
+    <classpathentry kind="var" path="ECLIPSE_HOME/plugins/library.edit_1.0.0/library.edit.jar"/>
     <classpathentry kind="var"
         path="ECLIPSE_HOME/plugins/org.eclipse.core.boot_2.1.2/boot.jar" sourcepath="ORG_ECLIPSE_PLATFORM_SOURCE_SRC/org.eclipse.core.boot_2.1.2/bootsrc.zip"/>
     <classpathentry kind="var"
         path="ECLIPSE_HOME/plugins/org.eclipse.core.runtime_2.1.1/runtime.jar" sourcepath="ORG_ECLIPSE_PLATFORM_SOURCE_SRC/org.eclipse.core.runtime_2.1.1/runtimesrc.zip"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+    <classpathentry kind="lib"
+        path="/BasicMtl2Java/LibAssociation/dist/bin/BasicMTLruntime.jar" sourcepath="BasicMtl2Java/LibAssociation/src"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
