--- a/RepositoryDriver_projects/org.inria.EMFDriver/.classpath
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
     <classpathentry kind="src" path="src/"/>
-    <classpathentry kind="lib" path="BasicMTLruntime.jar"/>
+    <classpathentry exported="true" kind="lib" path="BasicMTLruntime.jar"/>
+    <classpathentry kind="lib" path="log4j.jar"/>
     <classpathentry kind="var"
         path="ECLIPSE_HOME/plugins/org.eclipse.core.resources_2.1.1/resources.jar" sourcepath="ORG_ECLIPSE_PLATFORM_SOURCE_SRC/org.eclipse.core.resources_2.1.1/resourcessrc.zip"/>
     <classpathentry kind="var"
@@ -27,11 +28,11 @@
     <classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.eclipse.emf.edit_1.1.1/runtime/edit.jar"/>
     <classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.eclipse.emf.common_1.1.1/runtime/common.jar"/>
     <classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.eclipse.emf.ecore_1.1.1/runtime/ecore.jar"/>
+    <classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.eclipse.emf.ecore.xmi_1.1.1/runtime/ecore.xmi.jar"/>
     <classpathentry kind="var"
         path="ECLIPSE_HOME/plugins/org.eclipse.core.boot_2.1.2/boot.jar" sourcepath="ORG_ECLIPSE_PLATFORM_SOURCE_SRC/org.eclipse.core.boot_2.1.2/bootsrc.zip"/>
     <classpathentry kind="var"
         path="ECLIPSE_HOME/plugins/org.eclipse.core.runtime_2.1.1/runtime.jar" sourcepath="ORG_ECLIPSE_PLATFORM_SOURCE_SRC/org.eclipse.core.runtime_2.1.1/runtimesrc.zip"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-    <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
