--- a/RepositoryDriver_projects/org.inria.EMFDriver/plugin.xml
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/plugin.xml
@@ -17,6 +17,7 @@
       <import plugin="org.eclipse.core.resources"/>
       <import plugin="org.eclipse.ui"/>
       <import plugin="org.eclipse.emf.edit"/>
+      <import plugin="org.eclipse.emf.ecore.xmi"/>
    </requires>
 
 
