added test for expressions with operators added tests on boolean and integer
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@516 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/CompilerTests/src/behavioral_tests/test1/build.xml
+++ b/BasicMTL_projects/CompilerTests/src/behavioral_tests/test1/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2003-12-18 15:36:26 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.2 2004-04-06 08:08:09 dvojtise Exp $ -->
 <project name="UML14" default="run test1" basedir=".">
 	<description>
         Sample Build file for using the BasicMTL compiler
@@ -15,7 +15,7 @@
   		<ant antfile="test1Library1_build.xml" dir="." target="run"/>
   	</target>
   	<target name="clean">
-  		<delete dir="build"></delete>   		
+  		<delete dir="../../../build"></delete>   		
   	</target>
   	
 
