--- a/BasicMTL_projects/BasicMtl2Java/build.xml
+++ b/BasicMTL_projects/BasicMtl2Java/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.7 2004-03-15 14:27:30 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.8 2004-04-06 14:54:04 dvojtise Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="LibAssociation dist" basedir=".">
 	<description>
         Build for the different BasicMTL compilers following the bootstrap process
@@ -15,6 +15,10 @@
     	<ant antfile="LibAssociation_boot_build.xml" target="dist"/>
   	</target>
 	<target name="LibAssociation dist" depends="LibAssociation_boot dist">
+    	<ant antfile="LibAssociation_build.xml" target="dist"/>
+  	</target>
+  	
+	<target name="LibAssociation dist (alone)" description="do not compile the distributions of the bootstrap process">
     	<ant antfile="LibAssociation_build.xml" target="dist"/>
   	</target>
   	
