--- a/BasicMTL_projects/CompilerTests/src/build.xml
+++ b/BasicMTL_projects/CompilerTests/src/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.6 2004-02-26 09:52:58 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.7 2004-04-23 08:38:48 dvojtise Exp $ -->
 <project name="Build,run all tests" default="run all" basedir=".">
 	<description>
         Build and run all tests of the CompilerTests project
@@ -24,6 +24,8 @@
 	    <ant antfile="${basedir}/MultipleInheritence/build.xml" dir="${basedir}/MultipleInheritence" target="compile" inheritAll="false"/>
 	    <echo>Building "acceptSamples (visitors example)" test.</echo>
 	    <ant antfile="${basedir}/acceptSamples/build.xml" dir="${basedir}/acceptSamples" target="compile" inheritAll="false"/>
+	    <echo>Building "ForeachTests" test.</echo>
+	    <ant antfile="${basedir}/ForeachTests/build.xml" dir="${basedir}/ForeachTests" target="compile" inheritAll="false"/>
 	    
 	</target>
   
@@ -50,5 +52,8 @@
 	    <ant antfile="${basedir}/behavioral_tests/test1/build.xml" dir="${basedir}/behavioral_tests/test1" target="run test1" inheritAll="false"/>
    	    <ant antfile="${basedir}/behavioral_tests/test2/build.xml" dir="${basedir}/behavioral_tests/test2" target="run test2" inheritAll="false"/>
  	   <!-- <ant antfile="${basedir}/behavioral_tests/test6/build.xml" dir="${basedir}/behavioral_tests/test6" target="run test6" inheritAll="false"/> -->
+ 	    <echo>Running "ForeachTests" test.</echo>
+	    <ant antfile="${basedir}/ForeachTests/build.xml" dir="${basedir}/ForeachTests" target="run sample" inheritAll="false"/>
+	    
   	</target>
 </project>
