--- a/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/editors/MTLEditorMessages.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/editors/MTLEditorMessages.properties
@@ -1,11 +1,3 @@
-####################
-##
-##  Editor strings
-##
-####################
-
-## Actions
-
 ContentAssistProposal.label=Content Assist@Ctrl+SPACE
 ContentAssistProposal.tooltip=Content Assist
 ContentAssistProposal.image=
@@ -23,6 +15,10 @@ CompilerAction.description=Compiles the current MTL file
 CompilerAction.messageBoxContent=Before building your source code, you have to specify the location of the MTL compiler.
 CompilerAction.messageBoxTitle=MTL compiler location not specified
 CompilerAction.consoleViewOpeningProblem=A problem occured while opening the MTL console view
+
+OutlinePage.segment.title_pattern=position {0}
+Comment.label=Comment@Ctrl+/
+Comment.tooltip=Comment selected lines
 
 OutlinePage.segment.title_pattern=position {0}
 Comment.label=Comment@Ctrl+/
@@ -84,14 +80,6 @@ Format.description=Format the selected text
 
 Comment.label=Comment@Ctrl+/
 Comment.tooltip=Comment selected lines
-
-Uncomment.label=Uncomment@Ctrl+\
-Uncomment.tooltip=Uncomment selected lines
-
-TogglePresentation.label=Change Presentation
-TogglePresentation.tooltip=Enable/Disable Segmented Source Viewer
-TogglePresentation.image=togglepresentation.gif
-TogglePresentation.description=Enable/Disable Segmented Source Viewer
 
 OutlinePage.segment.title_pattern=position {0}
 
