--- a/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/preferences/MTLMessages.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/preferences/MTLMessages.properties
@@ -428,10 +428,10 @@ CodeFormatterPreferencePage.tab.newline.tabtitle=Ne&w Lines
 CodeFormatterPreferencePage.tab.linesplit.tabtitle=Line S&plitting
 CodeFormatterPreferencePage.tab.style.tabtitle=St&yle
 
-CompilerPreferencePage.description=Options for the Java compiler:\nNote that a full rebuild is required to make changes effective.
+CompilerPreferencePage.description=Options for the MTL compiler:\nNote that a full rebuild is required to make changes effective.
 CompilerPreferencePage.generation.tabtitle=Classfile &Generation
 CompilerPreferencePage.warnings.tabtitle=&Errors and Warnings
-CompilerPreferencePage.compliance.tabtitle=&JDK Compliance
+CompilerPreferencePage.compliance.tabtitle=&JDK Compliance 
 CompilerPreferencePage.others.tabtitle=&Other
 
 CompilerPreferencePage.warnings.description=Select the severity level for the following problems:
