--- a/BasicMTL_projects/org.inria.mtl.plugin/plugin.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/plugin.properties
@@ -26,6 +26,7 @@ MTLEditorPreferencePage=Editor
 MTLcomp=Compilateur
 MTLViewCategory=MTL
 outline=Outline
+Log4J=Log4J 
 
 ##Wizards  Extension point names ##
 new.category.name=MTL 
