--- a/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/preferences/MTLMessages.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/preferences/MTLMessages.properties
@@ -258,7 +258,7 @@ NewJavaProjectPreferencePage.folders.error.invalidbinname=Invalid output folder 
 NewJavaProjectPreferencePage.error.decode=Error while decoding JRE entry
 
 MTLEditorPreferencePage.updatesOnNextChangeIinEditor.label=Note: Updates on next change in the editor
-MTLEditorPreferencePage.problemIndicationTab.title=Problem Indi&cation
+MTLEditorPreferencePage.problemIndicationTab.title=Problem Indi&cation (Log4J) 
 MTLEditorPreferencePage.showQuickFixables=&Indicate problems solvable with Quick Fix in vertical ruler
 MTLEditorPreferencePage.description=MTL Editor settings:
 MTLEditorPreferencePage.font=Text Font:
@@ -674,4 +674,4 @@ CompilerAction.label=Compile C\# file
 CompilerAction.tooltip=Compiles the current C\# file
 CompilerAction.image=compile.gif
 CompilerAction.description=Compiles the current C\# file 
-C
+
